Feature: 프론트엔드 추가 (#14)
* Feature: 그룹 및 상품 DTO 고도화 (회원 수, 작성자 정보 추가)

* Build: CORS 설정 추가 및 .gitignore 업데이트

* Feat: 프론트엔드 UI/UX 고도화 (비어있는 상태 추가 및 백엔드 DTO 연동)

* Build: 프론트엔드 프로젝트 초기 설정 및 메타데이터 추가

* Feat: 프론트엔드 공통 컴포넌트 및 기본 페이지 추가

* Feat: 이메일 기반 로그인 및 회원가입 기능 구현

* Feat: 상품 등록 및 이미지 업로드 기능 구현

* Docs: 에이전트 규칙 문서 추가

* Refactor: ItemType에서 RENT 타입 제거

* Feat: Like → Bookmark 네이밍 변경 및 동적 인사말 추가

* Docs: 에이전트 규칙 문서 이동 및 업데이트 (AGENT_RULE.md -> AGENTS.md)

* Feat: 그룹 및 프로필 이미지 업로드 기능 구현 및 API 연동

* Build: 파비콘, PWA 설정 및 robots.txt 추가

* Feat: 이용약관 및 개인정보 처리방침 페이지 추가

* Fix: 로그인/회원가입 페이지 링크 연결 및 레이어 버그 수정

* Fix: 온보딩 및 회원가입 페이지 약관 링크 연결 및 클릭 버그 수정

* Refactor: 백엔드 코드 컨벤션 적용 및 북마크 도메인 리팩토링

* Refactor: Item 이미지 메타데이터 조인 (N + 1) 헤결 리팩토링

* Feat: 그룹 생성 API에 이미지 URL 추가 및 응답 DTO 수정