@@ -23,6 +23,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.redis.core.RedisTemplate;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -156,14 +157,16 @@ class ItemServiceTest {
 			Group group = createGroup(TEST_GROUP_ID, TEST_MEMBER_ID);
 			Item item = createItem(TEST_ITEM_ID, group, member);
 
-			given(itemRepository.findByGroupId(TEST_GROUP_ID)).willReturn(List.of(item));
+			List<Object[]> mockResult = new ArrayList<>();
+			mockResult.add(new Object[] { item, TEST_IMAGE_URL, 5L });
+			given(itemRepository.findByGroupIdWithLikes(TEST_GROUP_ID)).willReturn(mockResult);
 
 			// when
 			List<ItemListResult> results = itemService.getItemsByGroup(TEST_GROUP_ID);
 
 			// then
 			assertThat(results).hasSize(1);
-			assertThat(results.get(0).id()).isEqualTo(TEST_ITEM_ID);
+			assertThat(results.getFirst().id()).isEqualTo(TEST_ITEM_ID);
 		}
 
 	}
@@ -180,14 +183,16 @@ class ItemServiceTest {
 			Group group = createGroup(TEST_GROUP_ID, TEST_MEMBER_ID);
 			Item item = createItem(TEST_ITEM_ID, group, member);
 
-			given(itemRepository.findByMemberId(TEST_MEMBER_ID)).willReturn(List.of(item));
+			List<Object[]> mockResult = new ArrayList<>();
+			mockResult.add(new Object[] { item, TEST_IMAGE_URL, 3L });
+			given(itemRepository.findByMemberIdWithLikes(TEST_MEMBER_ID)).willReturn(mockResult);
 
 			// when
 			List<ItemListResult> results = itemService.getMySellingItems(TEST_MEMBER_ID);
 
 			// then
 			assertThat(results).hasSize(1);
-			assertThat(results.get(0).id()).isEqualTo(TEST_ITEM_ID);
+			assertThat(results.getFirst().id()).isEqualTo(TEST_ITEM_ID);
 		}
 
 	}
